# alpha_chess

./: CMakeLists.txt
config/: basic.json
doc/: devfeloper_manual.md
env/: Dockerfile  create-container.sh  create-image.sh  download_libtorch.sh
include/: CMakeLists.txt
include/chess/: chess.hpp
src/: CMakeLists.txt  main.cpp
src/MCTS/: CMakeLists.txt  mcts.cpp  mcts.h  node.cpp  node.h
src/MCTS/test/: CMakeLists.txt  DummyModel.h  KotHModel.h  TestMCTS.cpp  TestNode.cpp
src/args/: CMakeLists.txt  args_parser.cpp  args_parser.h
src/config/: CMakeLists.txt  config.cpp  config.h
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.h  queue.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/model/: CMakeLists.txt  model.cpp  model.h
src/trainer/: CMakeLists.txt  game_report.h  memory.h  thread_pool.cpp  thread_pool.h  trainer.cpp  trainer.h
src/trainer/test/: CMakeLists.txt  TestTrainer.cpp
src/utils/: CMakeLists.txt  board_utils.cpp  board_utils.h  random.cpp  random.h  string_utils.cpp  string_utils.h
src/utils/test/: CMakeLists.txt  TestRandom.cpp  TestStringUtils.cpp  TestUtils.cpp
tools/: build.sh  ci.py  clean.sh  init.sh  test.sh
